--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 bidict==0.21.2
 click==7.1.2
+dnspython==1.16.0
 Flask==1.1.2
-Flask-SocketIO==5.0.0
-gunicorn==20.0.4
+Flask-SocketIO==5.0.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 python-engineio==4.0.0
-python-socketio==5.0.3
+python-socketio==5.0.4
+six==1.15.0
 Werkzeug==1.0.1
-eventlet
-gevent-websocket
